package lapr4.droneinventory.repositories;

import eapli.framework.domain.repositories.DomainRepository;
import eapli.framework.general.domain.model.Designation;
import lapr4.droneinventory.domain.DroneModel;

public interface DroneModelRepository extends DomainRepository<Designation, DroneModel> {

}
